Change cars swagger examples
