# doc/swagger/swagger.json
@@ -44,7 +44,7 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/docs.ErrorInvCityName"
+                            "$ref": "#/definitions/docs.ErrorInvalidCityName"
                         }
                     },
                     "500": {
@@ -94,12 +94,6 @@
                         "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/docs.ErrorBadRequest"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/docs.ErrorNotFound"
                         }
                     },
                     "500": {
@@ -191,7 +185,7 @@
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/docs.ErrorNotFound"
+                            "$ref": "#/definitions/docs.ErrorCarNotFound"
                         }
                     },
                     "500": {
@@ -250,7 +244,7 @@
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/docs.ErrorNotFound"
+                            "$ref": "#/definitions/docs.ErrorCarNotFound"
                         }
                     },
                     "500": {
@@ -294,7 +288,7 @@
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/docs.ErrorNotFound"
+                            "$ref": "#/definitions/docs.ErrorCarNotFound"
                         }
                     },
                     "500": {
@@ -847,6 +841,23 @@
                 }
             }
         },
+        "docs.ErrorCarNotFound": {
+            "type": "object",
+            "properties": {
+                "detail": {
+                    "type": "string",
+                    "example": "car not found"
+                },
+                "status": {
+                    "type": "integer",
+                    "example": 404
+                },
+                "title": {
+                    "type": "string",
+                    "example": "Not Found"
+                }
+            }
+        },
         "docs.ErrorInternalServer": {
             "type": "object",
             "properties": {
@@ -864,7 +875,7 @@
                 }
             }
         },
-        "docs.ErrorInvCityName": {
+        "docs.ErrorInvalidCityName": {
             "type": "object",
             "properties": {
                 "detail": {
@@ -941,11 +952,11 @@
                 },
                 "status": {
                     "type": "integer",
-                    "example": 400
+                    "example": 404
                 },
                 "title": {
                     "type": "string",
-                    "example": "Bad Request"
+                    "example": "Not Found"
                 }
             }
         },
